fix gap between container and footer, fix grid flex

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,11 +13,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  padding-bottom: 50px;
 }
 
 .image-grid {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   align-items: center;
